# AtlasBootX

./: .gitignore  CMakeLists.txt  LICENSE  README.md
core/: BootManager.cpp  BootTypes.hpp  Image.cpp  UpdateManager.cpp  UpdateManager.hpp
examples/desktop_update_sim/: main.cpp
examples/porting_minimal/: main.cpp
interfaces/: IApplicationLauncher.hpp  IFlash.hpp
ports/native_sim/: NativeSimPort.cpp  NativeSimPort.hpp  README.md  VirtualFlash.cpp  VirtualFlash.hpp
ports/template/: README.md  TargetApplicationLauncher.cpp  TargetMemoryLayout.hpp  TargetPort.cpp
src/atlasboot/core/: BootManager.hpp  Image.hpp
src/atlasboot/ports/native_sim/: NativeSimApplicationLauncher.cpp  NativeSimApplicationLauncher.hpp  NativeSimMemoryLayout.hpp  NativeSimPort.cpp  NativeSimPort.hpp  README.md
src/atlasboot/ports/template/: TargetApplicationLauncher.hpp  TargetFlash.cpp  TargetFlash.hpp  TargetPort.hpp
tests/: core_flow_tests.cpp
